2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* tests/defaultvaluetest.c: Add enough exclusions to make the
	test succeed.

2007-12-28  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/Makefile.am:
	* modules/other/gail/tests/*:
	* configure.in: Merge tests from standalone gail. Bug #504568.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c: Make the finalizer work when display is
	not set.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Draw bottom shadow of GtkCalender headings. (#506113)

	* gtk/gtkcalendar.c: Set proper initial height for priv->header_win.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcalendar.c: Document the initial values of year/month/day
	properties.

2007-12-28  Christian Persch  <chpe@gnome.org>

	* gtk/gtkfontsel.c: (gtk_font_selection_get_property): Plug
	a mem leak. Bug #506096.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktable.c:
	* gtk/gtktreeview.c:
	* gtk/gtkprintoperation.c:
	* gtk/gtkprogressbar.c:
	* gtk/gtkmessagedialog.c:
	* gtk/gtknotebook.c:
	* gtk/gtkprinter.c:
	* gtk/gtkfilesel.c:
	* gtk/gtklabel.c:
	* gtk/gtklinkbutton.c:
	* gtk/gtkmenu.c: More default property value corrections.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkitemfactory.c (gtk_item_factory_finalize): Don't unref
	accel_group unless it is set.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkwindow-x11.c (get_default_title): Don't return NULL.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkhandlebox.c: Fix the default values of shadow and 
	shadow-type properties.

	* gtk/gtkfontsel.c: Fix the default values of several properties.

	* gtk/gtkfilesel.c: Fix the default value of the show-fileops
	property.

	* gtk/gtkcurve.c: Fix the default value of the curve-type property.

	* gtk/gtkcombo.c: Fix the default value of the enable-arrows-always
	property.

2007-12-28  Johan Dahlin  <johan@gnome.org>
